--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.7",
+    "@iconscout/react-unicons": "^2.0.2",
     "flowbite": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tw-elements": "^1.0.0-beta1",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
