--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@iconscout/react-unicons": "^2.0.2",
+    "aos": "^2.3.4",
     "flowbite": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
